# pain-ts-

./: Cargo.toml  README.md
src/: constants.rs  draw_screens.rs  input.rs  main.rs  paint.rs  sound_track.rs  taskbar.rs
