[package]
name = "pain-ts-"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
image = "0.25.5"
once_cell = "1.20.3"
pixels = "0.13.0"
rodio = "0.20.1"
wgpu = "0.17.0"
wgpu_glyph = "0.21.0"
winit = "0.28.0"
